[gd_scene load_steps=3 format=3 uid="uid://cdyj16x3u3s1x"]

[ext_resource type="Script" uid="uid://ksuc4oa65rxe" path="res://src/windows/dbase_editor/text.gd" id="1_jtjpg"]
[ext_resource type="Script" uid="uid://bh8vniea2yee2" path="res://src/utils/drag_drop_tree.gd" id="2_1u102"]

[node name="Text" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_jtjpg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_tab_index = 5

[node name="SearchEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Search..."
clear_button_enabled = true

[node name="Tree" type="Tree" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
allow_reselect = true
allow_rmb_select = true
hide_folding = true
hide_root = true
select_mode = 1
script = ExtResource("2_1u102")

[connection signal="text_changed" from="VBoxContainer/SearchEdit" to="." method="_on_search_edit_text_changed"]
[connection signal="item_activated" from="VBoxContainer/Tree" to="." method="_on_tree_item_activated"]
